# Allocity

./: .gitignore  CMakeLists.txt  TODO.md
include/: Allocator.hpp  Allocity.hpp  AllocityHashtable.hpp  AllocityThread.hpp  Allocity_impl.hpp  Blocks.hpp  DefaultAllocator.hpp  MemoryLayout.hpp  MemoryPool.hpp  StandardBlock.hpp  VariadicLayout.hpp
src/: Allocator.cpp  AllocityHashTable.cpp  AllocityThread.cpp  DefaultAllocator.cpp  MemoryPool.cpp  main.cpp
